--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.54.2",
     "shadcn": "^2.4.0-canary.12",
     "tailwind-merge": "^3.0.2",
