--- a/package.json
+++ b/package.json
@@ -23,17 +23,14 @@
     "cross-spawn": "^7.0.6",
     "dotenv": "^16.4.7",
     "firebase": "^11.4.0",
-    "firebase-admin": "^13.0.2",
     "lucide-react": "^0.477.0",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.54.2",
     "shadcn": "^2.4.0-canary.12",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
