--- a/package.json
+++ b/package.json
@@ -14,22 +14,26 @@
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@shadcn/ui": "^0.0.4",
+    "@tanstack/react-table": "^8.21.2",
     "add": "^2.0.6",
     "button": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookie-parser": "^1.4.7",
     "cross-spawn": "^7.0.6",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.7",
     "firebase": "^11.4.0",
     "lucide-react": "^0.477.0",
     "next": "^15.2.4",
     "react": "^19.0.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "shadcn": "^2.4.0-canary.12",
