--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.7",
     "firebase": "^11.4.0",
+    "iso4217": "^0.2.0",
     "lucide-react": "^0.477.0",
     "next": "^15.2.4",
     "react": "^19.0.0",
